# LLMsForDataScience

./: 1. Generative AI.ipynb  2. Prompt Engineering.ipynb  3. NLP with HuggingFace.ipynb  4. Whisper.ipynb  README.md  pyproject.toml
